<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone"
    >
    <!--android:visibility="gone"-->
    <!-- content header line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgContentTop"
        android:paddingBottom="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="7dp">

        <TextView
            android:id="@id/rv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/order_id_mock"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/price_mock"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <!-- content header image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/rv_icon"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/drawer_background" />

        <TextView
            android:id="@+id/head_image_right_text"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/rv_icon"
            android:layout_alignEnd="@id/rv_icon"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:text="@string/weight_mock" />

        <TextView
            style="@style/ContentImageBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/head_image_right_text"
            android:layout_alignStart="@id/head_image_right_text"
            android:text="@string/weight_badge" />



    </RelativeLayout>

    <!-- content body layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgContent"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="9dp">

        <!-- avatar and name part -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rv_description"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="4dp"
                android:text="description" />



            <!--<TextView
                android:id="@+id/content_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_description"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="8dp"
                android:text="description"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp" />-->

            <ImageView
                android:id="@+id/content_rating_stars"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_alignStart="@id/rv_description"
                android:layout_below="@id/rv_description"
                android:src="@drawable/stars" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/content_rating_stars"
                android:layout_marginBottom="-2dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/content_rating_stars"
                android:text="@string/rating_mock"
                android:textColor="@color/contentBadgeTitle"
                android:textSize="12sp" />

        </RelativeLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="9dp"
            android:src="@color/contentDividerLine" />

        <!-- addresses part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_from_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="Brand" />

                <TextView
                    android:id="@+id/rv_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_from_badge"
                    android:layout_below="@id/content_from_badge"
                    android:text="@string/content_from1_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/rv_organic1"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="Organic" />

                <TextView
                    android:id="@+id/rv_organic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/rv_organic1"
                    android:text="@string/content_from1_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="13sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">




            </RelativeLayout>

        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <!-- dates part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_delivery_date_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="Nutrition" />

                <TextView
                    android:id="@+id/rv_nutrition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_delivery_date_badge"
                    android:layout_below="@id/content_delivery_date_badge"
                    android:text="@string/delivery_time_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">



            </RelativeLayout>

        </LinearLayout>

        <!-- request button -->
        <!--<TextView
            android:id="@+id/content_request_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/btnRequest"
            android:padding="10dp"
            android:text="@string/request_btn_text"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/btn_annotation_mock"
            android:textAlignment="center"
            android:textColor="@color/contentBadgeTitle"
            android:textSize="12sp" />-->

    </LinearLayout>

</LinearLayout>